# tx-study-tool

./: .env  .gitignore  LICENSE  Makefile  Pipfile  README.rst  docker-compose.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py
cases/: my_repeatable_read_after_conflict.yaml  pg_repeatable_read_after_conflict.yaml
src/tests/: spy.py  stub.py  test_args.py  test_case.py  test_config.py  test_database.py  test_logging.py  test_runner.py
src/tests/data/: basic_case.yaml  no_engine_case.yaml  no_setup_case.yaml  no_step_case.yaml  no_teardown_case.yaml
src/txtool/: __init__.py  case.py  config.py  database.py  logging.py  runner.py  step.py
